--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2><span>基本情報</span></h2>
         </div>
         <div class="container">
-         <img src="img/img1-1.jpg">
+         <img src="/img1-1.jpg">
          <table>
             <tr><th>名前</th><th>平良　敦子</th></tr>
             <tr><th>ニックネーム</th><th>あっちゃん</th></tr>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="container">
-            <img src="img/img2-2.jpg">
+            <img src="/img2-2.jpg">
             <p class="txt-contents">
                 <span class="topic">ネイル</span>
                 <br>最近、ネイルをすることにハマっています!
@@ -42,7 +42,7 @@
         </div>
 
         <div class="container">
-            <img src="img/img3-3.JPG">
+            <img src="/img3-3.JPG">
             <p class="txt-contents"><br>
                 <span class="topic">旅行</span>
                 <br>コロナ前は、2連休さえあれば韓国に行ったり、1週間あればタイやフィリピンに行ったりしてました!
